# symfony-php-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/symfony_mcp/: __init__.py  config.py  executor.py  indexer.py  server.py
src/symfony_mcp/tools/: __init__.py  code.py  index.py  project.py  router.py  services.py  twig.py
tests/: conftest.py  test_code.py  test_indexer.py  test_project.py  test_services.py  test_twig.py
